Refactor and rename components. Fix styling.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>D&amp;D 5th Edition NPC Generator</title>
+  <title>D&amp;D 5th Edition Tools</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +12,6 @@
 </head>
 
 <body>
-
-  <app-root></app-root>
+  <dnd-app-root></dnd-app-root>
 </body>
-
 </html>
