Switch from FA to MDI icons. Add loading screen.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,24 @@
 </head>
 
 <body>
-  <dnd-app></dnd-app>
+  <dnd-app>
+    <div class="loading-splash">
+      <div class="loading-inner">
+        <div class="sk-cube-grid">
+          <div class="sk-cube sk-cube1"><i class="text-white mdi mdi-sword"></i></div>
+          <div class="sk-cube sk-cube2"><i class="text-white mdi mdi-shield"></i></div>
+          <div class="sk-cube sk-cube3"><i class="text-white mdi mdi-magic"></i></div>
+          <div class="sk-cube sk-cube4"><i class="text-white mdi mdi-pencil"></i></div>
+          <div class="sk-cube sk-cube5"><i class="text-white mdi mdi-book"></i></div>
+          <div class="sk-cube sk-cube6"><i class="text-white mdi mdi-dice-d20"></i></div>
+          <div class="sk-cube sk-cube7"><i class="text-white mdi mdi-male"></i></div>
+          <div class="sk-cube sk-cube8"><i class="text-white mdi mdi-eye"></i></div>
+          <div class="sk-cube sk-cube9"><i class="text-white mdi mdi-female"></i></div>
+        </div>
+        <h3>Loading...</h3>
+      </div>
+    </div>
+  </dnd-app>
 </body>
 
 </html>
